force-app/main/default/objects/Warehouse_Recip__c/Warehouse_Recip__c.object-meta.xml
<CustomObject>
    <label>Warehouse Receipt</label>
    <nameField>
        <label>Warehouse Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Warehouse Receipts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>