force-app/main/default/objects/Warehouse_Recip__c/fields/Avg_Weight__c.field-meta.xml
<CustomField>
    <fullName>Avg_Weight__c</fullName>
    <label>Avg Weight</label>
    <precision>16</precision>
    <required>true</required>
    <scale>6</scale>
    <type>Number</type>
</CustomField>