force-app/main/default/objects/Warehouse_Recip__c/fields/Date_of_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Purchase__c</fullName>
    <label>Date of Purchase</label>
    <required>true</required>
    <type>Date</type>
</CustomField>