force-app/main/default/objects/Warehouse_Recip__c/fields/Date_Of_Sell__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Sell__c</fullName>
    <label>Date Of Sell</label>
    <type>Date</type>
</CustomField>