force-app/main/default/objects/Warehouse_Recip__c/fields/Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Item_Name__c</fullName>
    <label>Item Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Groundnut(भुईमूग)</fullName>
            </value>
            <value>
                <fullName>Sunflower(सूर्यफूल)</fullName>
            </value>
            <value>
                <fullName>Sesame/Til(तीळ/तीळ)</fullName>
            </value>
            <value>
                <fullName>Safflower(करडई)</fullName>
            </value>
            <value>
                <fullName>Linseed(जवस)</fullName>
            </value>
            <value>
                <fullName>Soybean(सोयाबीन)</fullName>
            </value>
            <value>
                <fullName>Rapeseed(रेपसीड)</fullName>
            </value>
            <value>
                <fullName>Mustard(मोहरी)</fullName>
            </value>
            <value>
                <fullName>Wheat(गहू)</fullName>
            </value>
            <value>
                <fullName>Pearl millet(बाजरी)</fullName>
            </value>
            <value>
                <fullName>Finger miller(नाचणी )</fullName>
            </value>
            <value>
                <fullName>Rice(तांदूळ)</fullName>
            </value>
            <value>
                <fullName>Sorghum(ज्वारी)</fullName>
            </value>
            <value>
                <fullName>Barley(सातू)</fullName>
            </value>
            <value>
                <fullName>Maize/corn(मका)</fullName>
            </value>
            <value>
                <fullName>Gram /yellow gram/chickpeas(हरभरा)</fullName>
            </value>
            <value>
                <fullName>Split chickpeas(हरभराडाळ)</fullName>
            </value>
            <value>
                <fullName>Black-eyed beans/ black- eyed pea/ goat pea(चवळी)</fullName>
            </value>
            <value>
                <fullName>Black gram(उडीद)</fullName>
            </value>
            <value>
                <fullName>Split black gram(उडीदडाळ)</fullName>
            </value>
            <value>
                <fullName>Green gram(मुग)</fullName>
            </value>
            <value>
                <fullName>Split green gram(मुगडाळ)</fullName>
            </value>
            <value>
                <fullName>Red Pigeon pea(लाल तुर)</fullName>
            </value>
            <value>
                <fullName>White Piegeon Pea(पांढरी तुर)</fullName>
            </value>
            <value>
                <fullName>Split pigeon pea(तुरडाळ)</fullName>
            </value>
            <value>
                <fullName>Lentil(मसूर)</fullName>
            </value>
            <value>
                <fullName>Split lentil(मसूरडाळ)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>