force-app/main/default/objects/Warehouse_Recip__c/fields/Owner_Goods_Sign__c.field-meta.xml
<CustomField>
    <fullName>Owner_Goods_Sign__c</fullName>
    <label>Owner Goods Sign</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>