force-app/main/default/objects/Warehouse_Recip__c/fields/Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Name__c</fullName>
    <label>Goods Owner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>