force-app/main/default/objects/Warehouse_Recip__c/fields/Rate_Of_Goods__c.field-meta.xml
<CustomField>
    <fullName>Rate_Of_Goods__c</fullName>
    <label>Rate Of Goods</label>
    <precision>18</precision>
    <required>true</required>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>