force-app/main/default/objects/Warehouse_Recip__c/fields/Rent_of_per_Goods__c.field-meta.xml
<CustomField>
    <fullName>Rent_of_per_Goods__c</fullName>
    <label>Rent of per Goods</label>
    <precision>7</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>