force-app/main/default/objects/Warehouse_Recip__c/fields/Stage_of_Item__c.field-meta.xml
<CustomField>
    <fullName>Stage_of_Item__c</fullName>
    <label>Stage of Item</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Khari</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>