force-app/main/default/objects/Warehouse_Recip__c/fields/Stages__c.field-meta.xml
<CustomField>
    <fullName>Stages__c</fullName>
    <label>Stages</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inward</fullName>
            </value>
            <value>
                <fullName>Outward</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>