force-app/main/default/objects/Warehouse_Recip__c/fields/Total_Number_of_Days__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Days__c</fullName>
    <formula>Date_Of_Sell__c -  Date_of_Purchase__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Number of Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>