force-app/main/default/objects/Warehouse_Recip__c/fields/Total_Rent_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Rent_Amount__c</fullName>
    <formula>(( Item_Quantity__c *  Rent_of_per_Goods__c ) / 30 ) *  Total_Number_of_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Rent Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>