force-app/main/default/objects/Warehouse_Recip__c/fields/Total_Weight_of_Goods__c.field-meta.xml
<CustomField>
    <fullName>Total_Weight_of_Goods__c</fullName>
    <formula>(Item_Quantity__c  *  Avg_Weight__c ) / 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Weight of Goods</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>