force-app/main/default/objects/Warehouse_Recip__c/fields/Type_of_item__c.field-meta.xml
<CustomField>
    <fullName>Type_of_item__c</fullName>
    <label>Type of item</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Super</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>