force-app/main/default/objects/Warehouse_Recip__c/fields/Warehouse_Number__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Number__c</fullName>
    <label>Warehouse Number</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>