force-app/main/default/objects/Warehouse_Recip__c/fields/Warehouse_Receipt_Number__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Receipt_Number__c</fullName>
    <label>Warehouse Receipt Number</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>