force-app/main/default/objects/Warehouse_Recip__c/validationRules/Date_of_Sell.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_of_Sell</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Stages__c , &quot;OutWard&quot;),  ISBLANK( Date_Of_Sell__c ) )</errorConditionFormula>
    <errorDisplayField>Date_Of_Sell__c</errorDisplayField>
    <errorMessage>Please Enter</errorMessage>
</ValidationRule>